data/derived/comb/progs/unify/prog2477.ml.out
Characters 60-65:
  | (x::xs) -> x + x;;
               ^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
